--- a/app/views/stats/index.html.erb
+++ b/app/views/stats/index.html.erb
@@ -1,20 +1,34 @@
 <% provide(:title, 'Badger - Stats for ' + session[:company]) %>
 
 <div class="hero-unit center">
+  <% if params[:type] == 'extended' %>
+    <%= link_to("Want simpler stats?", stats_path(company: params[:company]), :class => 'btn btn-primary btn-index stat-toggle') %>
+  <% else %>
+    <%= link_to("Want fancier stats?", stats_path(company: params[:company], type: 'extended'), :class => 'btn btn-primary btn-index stat-toggle') %>
+  <% end %>
   <% @charts.each_pair do |key, array| %>
         <% if key == :global %>
           <h4>Global status</h4>
         <% end %>
 
-        <a href="#" class="btn btn-success btn-chart" onClick="$('#charts_<%= key.to_s %>').slideToggle();$(window).trigger('resize');" id="<%= key.to_s %>">Show/Hide <%= key.to_s.gsub('_', ' ') %></a><br/>
-        <div id="charts_<%= key.to_s %>" <% unless key == :global %>style="display:none;"<% end %>>
-          <div class="col-md-6 stat-chart">
-            <%= high_chart('pie_chart_stats_' + key.to_s, array[0]) %>
+          <a href="#" class="btn btn-success btn-chart" onClick="$('#charts_<%= key.to_s %>').slideToggle();$(window).trigger('resize');" id="<%= key.to_s %>">Show/Hide <%= key.to_s.gsub('_', ' ') %></a><br/>
+          <div class="row" id="charts_<%= key.to_s %>" <% unless key == :global %>style="display:none;"<% end %>>
+            <% if params[:type] == 'extended' %>
+              <div class="col-md-6 stat-chart">
+                <%= high_chart('pie_chart_stats_' + key.to_s, array[0]) %>
+              </div>
+              <div class="col-md-6 stat-chart">
+                <%= high_chart('pie_chart_status_' + key.to_s, array[1]) %>
+              </div>
+            <% else %>
+              <div class="col-md-6 stat-chart">
+                <%= raw array[0] %>
+              </div>
+              <div class="col-md-6 stat-chart">
+                <%= raw array[1] %>
+              </div>
+            <% end %>
           </div>
-          <div class="col-md-6 stat-chart">
-            <%= high_chart('pie_chart_status_' + key.to_s, array[1]) %>
-          </div>
-        </div>
 
         <% if key == :global %>
           <h4>Brand and type specific status</h4>
