--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -1,20 +1,28 @@
 <div id="headerwrap">
 	<div class="container">
-		<br>
 		<h1>Badger</h1>
-		<h2>Welcome to this data storage.</h2>
-		<div class="row">
-			<br>
-			<br>
-			<div>
-				<%= bootstrap_form_for(:user, :as => :user, :url => user_session_path, :html => { :class => 'navbar-form' }, help: :block) do |f| %>
-			    <%= f.email_field :email, hide_label: :true, placeholder: 'Email', :autofocus => true %>
-		  	  <%= f.password_field :password, hide_label: :true, placeholder: 'Password' %>
-	   		  <%= f.hidden_field :remember_me, :value => "1" %>
-  			  <%= f.submit 'Sign in', data: { disable_with: 'Signing in...' }, class: "btn btn-success" %>
-          <%= render 'layouts/signup/button' %>
-				<% end %>
+		<div class="wrapper">
+			<div class="washingmachine">
+				<div class="drum"></div>
+				<div class="door"></div>
+				<div class="tray"></div>
+				<div class="dial"></div>
+				<div class="buttons"></div>
+				<div class="pilot pilot-green"></div>
+				<div class="pilot pilot-red"></div>
 			</div>
+		</div>
+		<br><br><br><br><br><br><br><br><br>
+		<br><br><br><br><br><br><br><br><br>
+		<h2>Welcome to this data storage.</h2>
+		<div>
+			<%= bootstrap_form_for(:user, :as => :user, :url => user_session_path, :html => { :class => 'navbar-form' }, help: :block) do |f| %>
+				<%= f.email_field :email, hide_label: :true, placeholder: 'Email', :autofocus => true %>
+		  		<%= f.password_field :password, hide_label: :true, placeholder: 'Password' %>
+	   			<%= f.hidden_field :remember_me, :value => "1" %>
+  				<%= f.submit 'Sign in', data: { disable_with: 'Signing in...' }, class: "btn btn-success" %>
+            	<%= render 'layouts/signup/button' %>
+			<% end %>
 		</div>
   </div><!-- /container -->
 </div><!-- /headerwrap -->
