--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -110,7 +110,8 @@ a span:hover {
   background-color: #8e44ad !important;
 }
 
-.stat-colour-waiting {
+.stat-colour-waiting,
+.stat-colour-skipped {
   color: #f39c12 !important;
   background-color: #f39c12 !important;
 }
