--- a/app/views/layouts/_landing.html.erb
+++ b/app/views/layouts/_landing.html.erb
@@ -16,12 +16,12 @@
 		<br><br><br><br><br><br><br><br><br><br>
 		<div>
 			<%= bootstrap_form_for(:user, :as => :user, :url => user_session_path, :html => { :class => 'navbar-form' }, help: :block) do |f| %>
-				<h2>Welcome to this data storage.</h2>
+				<h2><%= t('layouts.landing.welcome') %></h2>
 				<div id="bm"></div>
-				<%= f.email_field :email, hide_label: :true, placeholder: 'Email', :autofocus => true %>
-		  		<%= f.password_field :password, hide_label: :true, placeholder: 'Password' %>
+				<%= f.email_field :email, hide_label: :true, placeholder: t('global.email'), :autofocus => true %>
+		  		<%= f.password_field :password, hide_label: :true, placeholder: t('global.password') %>
 	   			<%= f.hidden_field :remember_me, :value => "1" %>
-  				<%= f.submit 'Sign in', data: { disable_with: 'Signing in...' }, class: "btn btn-success" %>
+  				<%= f.submit t('layouts.signin.button'), data: { disable_with: t('layouts.signin.button_send') }, class: "btn btn-success" %>
             	<%= render 'layouts/signup/button' %>
 			<% end %>
 		</div>
@@ -30,11 +30,11 @@
 
 <!-- Report button with extra classes -->
 <a href="#" class="btn btn-warning btn-report" data-toggle="modal" data-target="#modal-report">
-  Report a problem
+  <%= t('layouts.report.button_large') %>
 </a>
 
 <%= render 'layouts/signup/form' %> 
 
 <script>
-	if(!Modernizr.canvas && !Modernizr.fontface){$('#bm')[0].innerHTML='<div class="alert alert-warning"><strong>Ohno, </strong> your browser is outdated and doesn\'t support all the features this site offers!<br>You might want to upgrade to Internet Explorer 10, Firefox 24+, Chrome 20+ or Opera 12+</div>'}
+	if(!Modernizr.canvas && !Modernizr.fontface){$('#bm')[0].innerHTML='<div class="alert alert-warning"><strong><%= t('layouts.landing.warning') %></strong> <%= t('layouts.landing.warning_msg') %></div>'}
 </script>
