--- a/app/views/layouts/report/_button.html.erb
+++ b/app/views/layouts/report/_button.html.erb
@@ -1,4 +1,4 @@
 <!-- Button trigger modal -->
 <a href="#" data-toggle="modal" data-target="#modal-report">
-  Report an error
+  <%= t('layouts.report.button_large') %>
 </a>
