--- a/app/views/layouts/signup/_button.html.erb
+++ b/app/views/layouts/signup/_button.html.erb
@@ -1,4 +1,4 @@
 <!-- Button trigger modal -->
 <a href="#" class="btn btn-danger btn-signup" data-toggle="modal" data-target="#modal-signup" data-no-turbolink="true">
-  Sign up
+  <%= t('layouts.signup.button') %>
 </a>
