--- a/app/views/mailer/send_welcome_message.html.erb
+++ b/app/views/mailer/send_welcome_message.html.erb
@@ -4,14 +4,9 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to Badger, <%= @user.name %></h1>
-    <p>
-      You have successfully signed up to Badger,
-      your username is: <%= @user.email %>.<br/>
-    </p>
-    <p>
-      To login to the site, just follow this link: <%= @url %>.
-    </p>
-    <p>Thanks for joining and have a great day!</p>
+    <h1><%= "#{t('mailer.welcome_msg.title')} #{@user.name}" %></h1>
+    <p><%= "#{t('mailer.welcome_msg.message')} #{@user.email}" %></p>
+    <p><%= "#{t('mailer.welcome_msg.site_link')} #{@url}" %></p>
+    <p><%= t('mailer.welcome_msg.greet') %></p>
   </body>
 </html>
