--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,23 +1,23 @@
 <footer>
       <div class="container">
-        <p>Made and maintained by <a href="mailto:info@nohm.eu">nohm</a></p>
+        <p><%= t('layouts.footer.copyright') %><a href="mailto:info@nohm.eu">nohm</a></p>
         <ul class="footer-links">
             <% unless user_signed_in? %>
               <li><%= render 'layouts/signup/button' %></li>
               <li class="muted"> &middot; </li>
-              <li><%= link_to "Forgot your password?", new_password_path(:user) %></li>
+              <li><%= link_to t('layouts.footer.forgot_pass'), new_password_path(:user) %></li>
               <li class="muted"> &middot; </li>
             <% end %>
             <li><%= render 'layouts/report/button' %></li>
             <% if user_signed_in? and can? :manage, User %>
               <li class="muted"> &middot; </li>
-              <li><%= link_to("Users", users_path) %></li>
+              <li><%= link_to(t('global.users'), users_path) %></li>
               <li class="muted"> &middot; </li>
-              <li><%= link_to("Appliances", appliances_path) %></li>
+              <li><%= link_to(t('global.appliances'), appliances_path) %></li>
               <li class="muted"> &middot; </li>
-              <li><%= link_to("Classes", classifications_path) %></li>
+              <li><%= link_to(t('global.classes'), classifications_path) %></li>
               <li class="muted"> &middot; </li>
-              <li><%= link_to("History", history_index_path) %></li>
+              <li><%= link_to(t('global.history'), history_index_path) %></li>
             <% end %>
         </ul>
       </div>
