--- a/app/views/layouts/report/_form.html.erb
+++ b/app/views/layouts/report/_form.html.erb
@@ -5,14 +5,14 @@
       <%= bootstrap_form_for(:home, :as => :home, :url => send_report_path) do |f| %>
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="modalLabel-report">Report error</h4>
+          <h4 class="modal-title" id="modalLabel-report"><%= t('layouts.report.button_large') %></h4>
         </div>
         <div class="modal-body">
-          <%= f.text_area :message %>
+          <%= f.text_area :message, label: t('global.message') %>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <%= f.submit 'Send report', data: { disable_with: 'Sending...' }, class: "btn btn-primary" %>
+          <%= f.submit t('layouts.report.button'), data: { disable_with: t('layouts.report.button_send') }, class: "btn btn-primary" %>
         </div>
       <% end %>
     </div><!-- /.modal-content -->
