--- a/app/views/layouts/signup/_form.html.erb
+++ b/app/views/layouts/signup/_form.html.erb
@@ -5,20 +5,20 @@
       <%= bootstrap_form_for(:user, :as => :user, :url => registration_path(:user)) do |f| %>
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="modalLabel-signup">Sign Up</h4>
-          <%= f.alert_message "Please fix the errors below." %>
+          <h4 class="modal-title" id="modalLabel-signup"><%= t('layouts.signup.button') %></h4>
+          <%= f.alert_message t('global.errors') %>
         </div>
         <div class="modal-body">
-          <%= f.text_field :name %>
-				  <%= f.email_field :email %>
-				  <%= f.password_field :password %>
-				  <%= f.password_field :password_confirmation %>
+          <%= f.text_field :name, label: t('global.name') %>
+				  <%= f.email_field :email, label: t('global.email') %>
+				  <%= f.password_field :password, label: t('global.password') %>
+				  <%= f.password_field :password_confirmation, label: t('global.password_confirmation') %>
 				  
 				  <%= f.hidden_field :initial_role, :value => params[:initial_role] %>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <%= f.submit 'Sign up', data: { disable_with: 'Signing up...' }, class: "btn btn-primary" %>
+          <button type="button" class="btn btn-default" data-dismiss="modal"><%= t('global.close') %></button>
+          <%= f.submit t('layouts.signup.button'), data: { disable_with:  t('layouts.signup.button_send') }, class: "btn btn-primary" %>
         </div>
       <% end %>
     </div><!-- /.modal-content -->
