--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -4,14 +4,14 @@
       <%= bootstrap_form_for user, :url => user_path(user), :html => {:method => :put, :class => 'form-horizontal' } do |f| %>
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title" id="modalLabel-user-<%= user.id%>">Change Role</h4>
+          <h4 class="modal-title" id="modalLabel-user-<%= user.id%>"><%= t('user.user.change') %></h4>
         </div>
         <div class="modal-body">
           <%= collection_select :user, :role_ids, Role.all, :id, :name, checked: user.role_ids.first %>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <%= f.submit "Change Role", :class => "btn" %>
+          <button type="button" class="btn btn-default" data-dismiss="modal"><%= t('global.close') %></button>
+          <%= f.submit t('user.user.change'), :class => "btn" %>
         </div>
       <% end %>
     </div>
