--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,8 +6,10 @@
 
   <%= f.text_field :name %>
   <%= f.email_field :email %>
+  <%= f.select :language, @locales %>
   <%= f.password_field :password, :help => '(leave blank if you don\'t want to change it)', :autocomplete => 'off' %>
   <%= f.password_field :password_confirmation %>
+  <br/>
   <%= f.password_field :current_password, :help => '(we need your current password to confirm your changes)' %>
 
   <%= f.form_group do %>
